--- a/develop/docker-compose/docker-compose.yml
+++ b/develop/docker-compose/docker-compose.yml
@@ -47,7 +47,9 @@ services:
       - ORACLE_CHARACTERSET=AL32UTF8
       - ORACLE_SID=FREE
     volumes:
-      - ./oracle-temporal-data:/opt/oracle/oradata  # Persistent storage for database files
+      - ./oracle/data:/opt/oracle/oradata  # Persistent storage for database files
+      - ./oracle/setup:/opt/oracle/scripts/setup  # Setup scripts - run once
+      - ./oracle/startup:/opt/oracle/scripts/startup  # Startup scripts - run each time container starts
     networks:
       - temporal-dev-network
   oracle-visibility:
@@ -62,7 +64,9 @@ services:
       - ORACLE_CHARACTERSET=AL32UTF8
       - ORACLE_SID=FREE
     volumes:
-      - ./oracle-temporal-visibility-data:/opt/oracle/oradata  # Persistent storage for database files
+      - ./oracle-visibility/data:/opt/oracle/oradata  # Persistent storage for database files
+      - ./oracle/setup:/opt/oracle/scripts/setup  # Setup scripts - run once
+      - ./oracle/startup:/opt/oracle/scripts/startup  # Startup scripts - run each time container starts
     networks:
       - temporal-dev-network
   elasticsearch:
